--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -1,22 +1,57 @@
 {
-  "name": "mobile",
-  "version": "1.0.0",
-  "main": "index.ts",
+  "name": "@headless-woo/mobile",
+  "version": "0.1.0",
+  "private": true,
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
+  },
   "scripts": {
-    "start": "expo start",
+    "dev": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:android": "eas build --platform android",
+    "build:ios": "eas build --platform ios",
+    "submit:android": "eas submit --platform android",
+    "submit:ios": "eas submit --platform ios",
+    "lint": "eslint . --ext .ts,.tsx",
+    "test": "jest"
   },
   "dependencies": {
-    "expo": "~54.0.12",
-    "expo-status-bar": "~3.0.8",
-    "react": "19.1.0",
-    "react-native": "0.81.4"
+    "@expo/vector-icons": "^14.0.0",
+    "@headless-woo/shared": "workspace:*",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "@tanstack/react-query": "^5.17.0",
+    "expo": "~50.0.0",
+    "expo-constants": "~15.4.0",
+    "expo-font": "~11.10.0",
+    "expo-linking": "~6.2.0",
+    "expo-router": "~3.4.0",
+    "expo-splash-screen": "~0.26.0",
+    "expo-status-bar": "~1.11.0",
+    "expo-system-ui": "~2.9.0",
+    "expo-web-browser": "~12.8.0",
+    "react": "18.2.0",
+    "react-native": "0.73.0",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@types/react": "~19.1.0",
-    "typescript": "~5.9.2"
-  },
-  "private": true
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.45",
+    "@types/react-native": "~0.73.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.0.0",
+    "eslint-config-expo": "^7.0.0",
+    "jest": "^29.2.1",
+    "typescript": "^5.1.3"
+  }
 }
