--- a/nginx.conf
+++ b/nginx.conf
@@ -35,6 +35,20 @@ http {
         application/atom+xml
         image/svg+xml;
 
+    # Brotli compression (better than gzip)
+    brotli on;
+    brotli_comp_level 6;
+    brotli_types
+        text/plain
+        text/css
+        text/xml
+        text/javascript
+        application/json
+        application/javascript
+        application/xml+rss
+        application/atom+xml
+        image/svg+xml;
+
     server {
         listen 80;
         server_name _;
@@ -45,6 +59,7 @@ http {
 
     server {
         listen 443 ssl http2;
+        listen 443 ssl http3;
         server_name _;
 
         # SSL configuration
@@ -55,6 +70,10 @@ http {
         ssl_prefer_server_ciphers off;
         ssl_session_cache shared:SSL:10m;
         ssl_session_timeout 10m;
+        
+        # HTTP/3 configuration
+        ssl_early_data on;
+        ssl_session_tickets on;
 
         # Client max body size
         client_max_body_size 10M;
